--- a/templates/map.html
+++ b/templates/map.html
@@ -1,10 +1,8 @@
-{% extends "base.html" %}
+{% extends "base-map-container.html" %}
 {% block content %}
 
 <!--suppress HtmlUnknownTarget -->
 <div id="map"></div>
-
-<a href="/login">Admin login</a>
 
 <script type="importmap">
 {
