--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,21 +1,21 @@
 /* GENERAL PAGE LAYOUT */
 
-div.container {
-    display:grid;
-    grid-template-rows:auto 1fr auto;
-    grid-template-columns:100%;
-    min-height:100svh;
+
+/* MAP */
+
+div.map-container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 100%;
+    min-height: 100svh;
     width: 100% !important;
     max-width: 100% !important;
     padding: 0;
 }
 
-
-/* MAP */
-
 div#map {
     width: auto;
-    height: 100%;
+    height: 100svh;
     margin: 0;
     overflow: hidden;
     cursor: default;
