--- a/templates/adminevents.html
+++ b/templates/adminevents.html
@@ -1,19 +1,33 @@
-{% extends "base.html" %}
+{% extends "base-std-container.html" %}
 {% block content %}
 
 <!--suppress HtmlUnknownTarget -->
-<h1>Manage Events</h1>
-
-<p>Click on an event to update or delete it.</p>
-
-<ul>
-    {% for event in events %}
-        <li><a href="/admin/event/{{ event.id }}">{{ event.name }}</a></li>
-    {% end %}
-</ul>
-
-<p><a href="/admin/event/new">Create new event</a></p>
-
-<p><a href="/admin">Back to dashboard</a></p>
+<div class="card mx-auto" style="max-width: 24rem;">
+    <div class="card-header">
+        <h5 class="mb-0">Manage Events</h5>
+    </div>
+    <div class="card-body">
+        <p class="card-text">Click on an event to update or delete it.</p>
+        <ul class="nav flex-column">
+            {% for event in events %}
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/event/{{ event.id }}">{{ event.name }}</a>
+            </li>
+            {% end %}
+        </ul>
+        <ul class="nav flex-column mt-5">
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/event/new">Create new event</a>
+            </li>
+        </ul>
+    </div>
+    <div class="card-footer text-muted">
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link" href="/admin">&laquo; Back to dashboard</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 {% end %}
