--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 
 <div class="card bg-light mx-auto" style="max-width: 24rem;">
     <div class="card-header">
-        <h5>Admin Login</h5>
+        <h5 class="mb-0 card-title">Admin Login</h5>
     </div>
     <div class="card-body">
         <form method="post">
