--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -1,4 +1,4 @@
-{% extends "base-std-container.html" %}
+{% extends "base-std.html" %}
 {% block content %}
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
