--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -13,9 +13,9 @@
     <label for="name">Name:</label> <input type="text" id="name" name="name"
                                            value="{{ '' if creating_new else event.name }}" required/><br/>
     <label for="start_time">Start Time (UTC):</label> <input id="start_time" name="start_time" type="datetime-local"
-                                                             value="{{ (datetime.datetime.now() if creating_new else event.start_time).strftime('%Y-%m-%dT%H:%M') }}" required /><br/>
+                                                             value="{{ (default_start if creating_new else event.start_time).strftime('%Y-%m-%dT%H:%M') }}" required /><br/>
     <label for="end_time">End Time (UTC):</label> <input id="end_time" name="end_time" type="datetime-local"
-                                                         value="{{ (datetime.datetime.now() if creating_new else event.end_time).strftime('%Y-%m-%dT%H:%M') }}" required /><br/>
+                                                         value="{{ (default_end if creating_new else event.end_time).strftime('%Y-%m-%dT%H:%M') }}" required /><br/>
     Bands:
     {% for band in all_bands %}
     <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
