Dark mode support. Closes #37

--- a/templates/adminevents.html
+++ b/templates/adminevents.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!--suppress HtmlUnknownTarget -->
-<div class="card mx-auto" style="max-width: 24rem;">
+<div class="card mx-auto bg-body-tertiary" style="max-width: 24rem;">
     <div class="card-header">
         <h5 class="mb-0">Manage Events</h5>
     </div>
