--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 </div>
 {% end %}
 
-<div class="card bg-light mx-auto" style="max-width: 24rem;">
+<div class="card bg-body-tertiary mx-auto" style="max-width: 24rem;">
     <div class="card-header">
         <h5 class="mb-0 card-title">Admin Login</h5>
     </div>
