--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,7 +20,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <div class="card">
+        <div class="card bg-body-tertiary">
             <div class="card-header card-title">
                 <h5 class="mb-0">Your Account</h5>
             </div>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="col-sm-4">
-        <div class="card">
+        <div class="card bg-body-tertiary">
             <div class="card-header">
                 <h5 class="mb-0 card-title">Admin Controls</h5>
             </div>
@@ -56,7 +56,7 @@
     </div>
     {% if user.super_admin %}
     <div class="col-sm-4">
-        <div class="card">
+        <div class="card bg-body-tertiary">
             <div class="card-header">
                 <h5 class="mb-0 card-title">Super-Admin Controls</h5>
             </div>
