--- a/templates/adminstations.html
+++ b/templates/adminstations.html
@@ -4,7 +4,7 @@
 <!--suppress HtmlUnknownTarget -->
 <div class="row">
     <div class="col-sm-6">
-        <div class="card mx-auto">
+        <div class="card mx-auto bg-body-tertiary">
             <div class="card-header">
                 <h5 class="mb-0">Manage Temporary/Special Event Stations</h5>
             </div>
@@ -41,7 +41,7 @@
 
 
     <div class="col-sm-6">
-        <div class="card mx-auto">
+        <div class="card mx-auto bg-body-tertiary">
             <div class="card-header">
                 <h5 class="mb-0">Manage Permanent/Club Stations</h5>
             </div>
