--- a/templates/adminevents.html
+++ b/templates/adminevents.html
@@ -22,7 +22,7 @@
         </ul>
     </div>
     <div class="card-footer text-muted">
-        <ul class="nav flex-column">
+        <ul class="nav flex-row">
             <li class="nav-item">
                 <a class="nav-link" href="/admin">&laquo; Back to dashboard</a>
             </li>
