--- a/templates/adminstations.html
+++ b/templates/adminstations.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="card-footer text-muted">
-                <ul class="nav flex-column">
+                <ul class="nav flex-row">
                     <li class="nav-item">
                         <a class="nav-link" href="/admin">&laquo; Back to dashboard</a>
                     </li>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="card-footer text-muted">
-                <ul class="nav flex-column">
+                <ul class="nav flex-row">
                     <li class="nav-item">
                         <a class="nav-link" href="/admin">&laquo; Back to dashboard</a>
                     </li>
