--- a/templates/adminstationtemp.html
+++ b/templates/adminstationtemp.html
@@ -2,94 +2,239 @@
 {% block content %}
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
-<h1>{{ "Create" if creating_new else "Update" }} Temporary/SES Station</h1>
-{% if creating_new %}
-<p>Please enter the details for the new station.</p>
-{% else %}
-<p>Updating details for {{ station.callsign }} {{ station.club_name }}{% if station.event %} at {{ station.event.name
-    }}{% else %} (SES){% end %}.</p>
-{% end %}
-
-<form method="post">
-    <label for="callsign">Callsign:</label> <input type="text" id="callsign" name="callsign"
-                                                   value="{{ '' if creating_new else station.callsign }}"
-                                                   required/><br/>
-    <label for="club_name">Club/station name:</label> <input type="text" id="club_name" name="club_name"
-                                                     value="{{ '' if creating_new else station.club_name }}"
-                                                     required/><br/>
-    <label for="event">Event (Optional):</label>
-    <select name="event" id="event">
-        <option value=""></option>
-        {% for event in all_events %}
-        <option value="{{ event.id }}" {% if not creating_new and station.event_id == event.id %}selected{% end %}>{{ event.name }}</option>
+<div class="card mx-auto bg-body-tertiary" style="max-width: 40rem;">
+    <div class="card-header">
+        <h5 class="mb-0 card-title">{{ "Create" if creating_new else "Update" }} Temporary/SES Station</h5>
+    </div>
+    <div class="card-body">
+        {% if creating_new %}
+        <p>Please enter the details for the new station.</p>
+        {% else %}
+        <p>Updating details for {{ station.callsign }} {{ station.club_name }}{% if station.event %} at
+            {{station.event.name}}{% else %} (SES){% end %}.</p>
         {% end %}
-    </select><br/>
-    <label for="start_time">Start Time (UTC):</label> <input id="start_time" name="start_time" type="datetime-local"
-                                                             value="{{ (default_start if creating_new else event.start_time).strftime('%Y-%m-%dT%H:%M') }}" required /><br/>
-    <label for="end_time">End Time (UTC):</label> <input id="end_time" name="end_time" type="datetime-local"
-                                                         value="{{ (default_end if creating_new else event.end_time).strftime('%Y-%m-%dT%H:%M') }}" required /><br/>
-    <label for="latitude_degrees">Latitude (degrees):</label> <input type="number" id="latitude_degrees"
-                                                                     name="latitude_degrees"
-                                                                     step="any" min="-90"
-                                                                     max="90"
-                                                                     value="{{ '' if creating_new else station.latitude_degrees }}"
-                                                                     required/><br/>
-    <label for="longitude_degrees">Longitude (degrees):</label> <input type="number" id="longitude_degrees"
-                                                                       name="longitude_degrees" step="any" min="-180"
-                                                                       max="180"
-                                                                       value="{{ '' if creating_new else station.longitude_degrees }}"
-                                                                       required/><br/>
-    Bands:
-    {% for band in all_bands %}
-    <input type="checkbox" id="band-{{ band.id }}" name="bands[]" value="{{ band.id }}"
-           {% if creating_new or band.id in [x.id for x in station.bands] %}checked{% end %}/>
-    <label for="band-{{ band.id }}">{{ band.name }}</label>
-    {% end %}
-    <br/>
-    Modes:
-    {% for mode in all_modes %}
-    <input type="checkbox" id="mode-{{ mode.id }}" name="modes[]" value="{{ mode.id }}"
-           {% if creating_new or mode.id in [x.id for x in station.modes] %}checked{% end %}/>
-    <label for="mode-{{ mode.id }}">{{ mode.name }}</label>
-    {% end %}
-    <br/>
-    <label for="notes">Notes (optional):</label> <textarea id="notes" name="notes"
-                                                           rows="5">{{ '' if creating_new else station.notes }}</textarea><br/>
-    <label for="website_url">Website (optional):</label> <input type="text" id="website_url" name="website_url"
-                                                                value="{{ '' if creating_new else station.website_url }}"/><br/>
-    <label for="qrz_url">QRZ page (optional):</label> <input type="text" id="qrz_url" name="qrz_url"
-                                                             value="{{ '' if creating_new else station.qrz_url }}"/><br/>
-    <label for="social_media_url">Social media (optional):</label> <input type="text" id="social_media_url"
-                                                                          name="social_media_url"
-                                                                          value="{{ '' if creating_new else station.social_media_url }}"/><br/>
-    <label for="email">Email (optional):</label> <input type="text" id="email" name="email"
-                                                        value="{{ '' if creating_new else station.email }}"/><br/>
-    <label for="phone_number">Phone number (optional):</label> <input type="text" id="phone_number" name="phone_number"
-                                                                      value="{{ '' if creating_new else station.phone_number }}"/><br/>
-    <input type="checkbox" id="rsgb_attending" name="rsgb_attending" value="true"
-           {% if not creating_new and station.rsgb_attending %}checked{% end %}>
-    <label for="rsgb_attending">RSGB attending</label><br/>
-    <input type="checkbox" id="approved" name="approved" value="true"
-           {% if not creating_new and station.approved %}checked{% end %}>
-    <label for="approved">Approved</label><br/>
-    {% if not creating_new %}
-    <label for="edit_password">User edit password:</label> <input type="text" id="edit_password" name="edit_password"
-                                                                  value="{{ '' if creating_new else station.edit_password }}"/><br/>
-    {% end %}
 
-    {% if creating_new %}
-    <input type="submit" name="action" value="Create">
-    {% else %}
-    <input type="submit" name="action" value="Update"> <input type="submit" name="action" value="Delete">
-    {% end %}
-</form>
+        <form method="post">
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="callsign" class="form-label mt-2">Callsign:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="callsign" class="form-control" name="callsign"
+                           value="{{ '' if creating_new else station.callsign }}"
+                           required/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="club_name" class="form-label mt-2">Club/station name:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="club_name" class="form-control" name="club_name"
+                           value="{{ '' if creating_new else station.club_name }}"
+                           required/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="event" class="form-label mt-2">Event (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <select name="event" id="event" class="form-control">
+                        <option value=""></option>
+                        {% for event in all_events %}
+                        <option value="{{ event.id }}" {% if not creating_new and station.event_id== event.id
+                                %}selected{% end %}>{{
+                            event.name }}
+                        </option>
+                        {% end %}
+                    </select>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="start_time" class="form-label mt-2">Start time (UTC:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input id="start_time" class="form-control" name="start_time" type="datetime-local"
+                           value="{{ (default_start if creating_new else event.start_time).strftime('%Y-%m-%dT%H:%M') }}"
+                           required/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="end_time" class="form-label mt-2">Start time (UTC:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input id="end_time" class="form-control" name="end_time" type="datetime-local"
+                           value="{{ (default_end if creating_new else event.end_time).strftime('%Y-%m-%dT%H:%M') }}"
+                           required/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="latitude_degrees" class="form-label mt-2">Latitude (degrees):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="number" id="latitude_degrees" class="form-control"
+                           name="latitude_degrees" step="any" min="-90" max="90"
+                           value="{{ '' if creating_new else station.latitude_degrees }}" required/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="longitude_degrees" class="form-label mt-2">Longitude (degrees):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="number" id="longitude_degrees" class="form-control"
+                           name="longitude_degrees" step="any" min="-180" max="180"
+                           value="{{ '' if creating_new else station.longitude_degrees }}" required/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label class="form-label mt-2">Bands:</label>
+                </div>
+                <div class="col-sm-8">
+                    {% for band in all_bands %}
+                    <span style="display:inline-block; min-width:5em;">
+                    <input type="checkbox" id="band-{{ band.id }}" class="form-check-input" name="bands[]"
+                           value="{{ band.id }}"
+                           {% if creating_new or band.id in [x.id for x in station.bands] %}checked{% end %}/>&nbsp;
+                    <label for="band-{{ band.id }}" class="form-check-label">{{ band.name }}</label>
+                    </span>
+                    {% end %}
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label class="form-label mt-2">Modes:</label>
+                </div>
+                <div class="col-sm-8">
+                    {% for mode in all_modes %}
+                    <span style="display:inline-block; min-width:5em;">
+                    <input type="checkbox" id="mode-{{ mode.id }}" class="form-check-input" name="modes[]"
+                           value="{{ mode.id }}"
+                           {% if creating_new or mode.id in [x.id for x in station.modes] %}checked{% end %}/>&nbsp;
+                    <label for="mode-{{ mode.id }}" class="form-check-label">{{ mode.name }}</label>
+                    </span>
+                    {% end %}
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="notes" class="form-label mt-2">Notes (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <textarea id="notes" class="form-control" name="notes" rows="5">{{ '' if creating_new else station.notes }}</textarea>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="website_url" class="form-label mt-2">Website (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="website_url" class="form-control" name="website_url"
+                           value="{{ '' if creating_new else station.website_url }}"/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="qrz_url" class="form-label mt-2">QRZ Page (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="qrz_url" class="form-control" name="qrz_url"
+                           value="{{ '' if creating_new else station.qrz_url }}"/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="social_media_url" class="form-label mt-2">Social media (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="social_media_url" class="form-control" name="social_media_url"
+                           value="{{ '' if creating_new else station.social_media_url }}"/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="email" class="form-label mt-2">Email address (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="email" class="form-control" name="email"
+                           value="{{ '' if creating_new else station.email }}"/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="phone_number" class="form-label mt-2">Phone (optional):</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="phone_number" class="form-control" name="phone_number"
+                           value="{{ '' if creating_new else station.phone_number }}"/>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-8">
+                    <input type="checkbox" id="rsgb_attending" class="form-check-input" name="rsgb_attending"
+                           value="true"
+                           {% if not creating_new and station.rsgb_attending %}checked{% end %}>
+                    <label for="rsgb_attending" class="form-check-label">RSGB Attending</label>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-8">
+                    <input type="checkbox" id="approved" class="form-check-input" name="approved" value="true"
+                           {% if not creating_new and station.approved %}checked{% end %}>
+                    <label for="approved" class="form-check-label">Approved</label>
+                </div>
+            </div>
+            {% if not creating_new %}
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="edit_password" class="form-label mt-2">User edit password:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="edit_password" class="form-control" name="edit_password"
+                           value="{{ '' if creating_new else station.edit_password }}" required/>
+                </div>
+            </div>
+            {% end %}
+            <div class="row mb-2 mt-4">
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-8">
+                    {% if creating_new %}
+                    <input type="submit" class="btn btn-primary" name="action" value="Create">
+                    {% else %}
+                    <input type="submit" class="btn btn-primary" name="action" value="Update">
+                    <input type="submit" class="btn btn-danger" name="action" value="Delete">
+                    {% end %}
+                </div>
+            </div>
+        </form>
 
-{% if not creating_new and station.event %}
-<h2>Linked event:</h2>
-<p><a href="/admin/event/{{ station.event.id }}">{{ station.event.name }}</a></p>
-{% end %}
-
-<p><a href="/admin/stations">Back to station list</a></p>
-<p><a href="/admin">Back to dashboard</a></p>
+        {% if not creating_new and station.event %}
+        <h5 class="mt-5">Linked event:</h5>
+        <ul class="nav flex-column">
+            <li class="nav-item"><a class="nav-link" href="/admin/event/{{ station.event.id }}">{{ station.event.name }}</a></li>
+        </ul>
+        {% end %}
+    </div>
+    <div class="card-footer text-muted">
+        <ul class="nav flex-row">
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/stations">&laquo; Back to station list</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin">&laquo; Back to dashboard</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 {% end %}
