--- a/templates/adminuser.html
+++ b/templates/adminuser.html
@@ -2,32 +2,81 @@
 {% block content %}
 
 <!--suppress HtmlUnknownAttribute, HtmlUnknownTarget  -->
-<h1>{{ "Create" if creating_new else "Update" }} User</h1>
-{% if creating_new %}
-    <p>Please enter the details for the new user.</p>
-{% else %}
-    <p>Updating details for {{ user.username }}.</p>
-    <p>Updating the password is optional. Leave the fields blank if you do not wish to change the password.</p>
-{% end %}
+<div class="card mx-auto bg-body-tertiary" style="max-width: 40rem;">
+    <div class="card-header">
+        <h5 class="mb-0 card-title">{{ "Create" if creating_new else "Update" }} User</h5>
+    </div>
+    <div class="card-body">
+        {% if creating_new %}
+        <p>Please enter the details for the new user.</p>
+        {% else %}
+        <p>Updating details for {{ user.username }}.</p>
+        <p>Updating the password is optional. Leave the fields blank if you do not wish to change the password.</p>
+        {% end %}
 
-<form method="post">
-    <label for="username">Username:</label> <input type="text" id="username" name="username" value="{{ '' if creating_new else user.username }}" required><br>
-    <label for="password">Password:</label> <input type="password" id="password" name="password" {% if creating_new %}required{% end %}><br>
-    <label for="email">Email Address:</label> <input type="text" id="email" name="email" value="{{ user.email if (not creating_new and user.email != 'None') else '' }}" required><br>
-
-    {% if current_user.super_admin %}
-        <input type="checkbox" id="super-admin" name="super_admin" value="true"
-                   {% if not creating_new and user.super_admin %}checked{% end %}>
-            <label for="super-admin">Super-Admin</label><br/>
-    {% end %}
-
-    {% if creating_new %}
-        <input type="submit" name="action" value="Create">
-    {% else %}
-        <input type="submit" name="action" value="Update"> <input type="submit" name="action" value="Delete">
-    {% end %}
-</form>
-
-<p><a href="/admin">Back to dashboard</a></p>
+        <form method="post">
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="username" class="form-label mt-2">Username:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="username" class="form-control" name="username"
+                           value="{{ '' if creating_new else user.username }}" required>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="password" class="form-label mt-2">Password:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="password" id="password" class="form-control" name="password" {% if creating_new
+                           %}required{% end %}>
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                    <label for="email" class="form-label mt-2">Email address:</label>
+                </div>
+                <div class="col-sm-8">
+                    <input type="text" id="email" class="form-control" name="email"
+                           value="{{ user.email if (not creating_new and user.email != 'None') else '' }}" required>
+                </div>
+            </div>
+            {% if current_user.super_admin %}
+            <div class="row mb-2">
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-8">
+                    <input type="checkbox" id="super-admin" class="form-check-input" name="super_admin" value="true"
+                           {% if not creating_new and user.super_admin %}checked{% end %}>
+                    <label for="super-admin" class="form-check-label">Super-Admin</label><br/>
+                </div>
+            </div>
+            {% end %}
+            <div class="row mb-2 mt-4">
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-8">
+                    {% if creating_new %}
+                    <input type="submit" class="btn btn-primary" name="action" value="Create">
+                    {% else %}
+                    <input type="submit" class="btn btn-primary" name="action" value="Update">
+                    <input type="submit" class="btn btn-danger" name="action" value="Delete">
+                    {% end %}
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="card-footer text-muted">
+        <ul class="nav flex-row">
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/users">&laquo; Back to user list</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin">&laquo; Back to dashboard</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
 {% end %}
