Use a real browser colour picker #40

--- a/templates/adminevent.html
+++ b/templates/adminevent.html
@@ -90,7 +90,7 @@
                     <label for="color" class="form-label mt-2">Colour:</label>
                 </div>
                 <div class="col-sm-8">
-                    <input type="text" id="color" class="form-control" name="color"
+                    <input type="color" id="color" class="form-control form-control-color" name="color"
                            value="{{ '' if creating_new else event.color }}" required/>
                 </div>
             </div>
