Skeleton of view station details page #11

--- a/templates/map.html
+++ b/templates/map.html
@@ -14,8 +14,8 @@
 }
 </script>
 <script>
-    let perm_stations = JSON.parse({% raw json_encode(perm_stations) %});
-    let temp_stations = JSON.parse({% raw json_encode(temp_stations) %});
+    let perm_stations = JSON.parse({% raw json_encode(perm_stations_json) %});
+    let temp_stations = JSON.parse({% raw json_encode(temp_stations_json) %});
 </script>
 <script type="module" src="/js/map.js?v=1"></script>
 {% end %}
